# Estructura-de-datos-

Colas/: AgregarACola.cpp  CMakeLists.txt  ejercicio1.cpp  ejercicioCola.cpp  sumprimirCola.cpp
Listas/: CMakeLists.txt  agregarLista.cpp  menuInteractivo.cpp  practica.cpp  practicaFinal.cpp  restaurante.cpp
Parcial/: CMakeLists.txt  ejercicioCola.cpp  ejercicioPilas.cpp
Pilas/: CMakeLists.txt  agregarPila.cpp  ejercicioPila1.cpp  ejercicioPila2.cpp  ejercicioPunteroVector.cpp  introduccionPunteros.cpp
arboles/: CMakeLists.txt  teoria
