cmake_minimum_required(VERSION 3.23)
project(Pilas)

set(CMAKE_CXX_STANDARD 14)

add_executable(agregarPila agregarPila.cpp)
add_executable(ejercicioPila1 ejercicioPila1.cpp)
add_executable(ejercicioPila2 ejercicioPila2.cpp)
add_executable(ejercicioPunteroVector ejercicioPunteroVector.cpp)
add_executable(introduccionPunteros introduccionPunteros.cpp)

